// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormComboBox renders with no options by default 1`] = `
<div class="container"
     role="none"
>
  <label class="govuk-label"
         for="test-combobox-input"
  >
    Choose option
  </label>
  <input type="text"
         role="combobox"
         class="searchInput govuk-input"
         id="test-combobox-input"
         aria-autocomplete="list"
         aria-haspopup="listbox"
         aria-controls="test-combobox-options"
         aria-expanded="true"
         value
  >
</div>
`;

exports[`FormComboBox renders with options in correct order when input changes 1`] = `
<div class="container"
     role="none"
>
  <label class="govuk-label"
         for="test-combobox-input"
  >
    Choose option
  </label>
  <input type="text"
         role="combobox"
         class="searchInput govuk-input"
         id="test-combobox-input"
         aria-autocomplete="list"
         aria-haspopup="listbox"
         aria-controls="test-combobox-options"
         aria-expanded="true"
         value="Test"
  >
  <div class="optionsContainer"
       role="alert"
  >
    <ul class="options"
        id="test-combobox-options"
        role="listbox"
    >
      <li aria-posinset="1"
          aria-selected="false"
          aria-setsize="3"
          id="test-combobox-option-0"
          role="option"
          tabindex="-1"
      >
        Option 1
      </li>
      <li aria-posinset="2"
          aria-selected="false"
          aria-setsize="3"
          id="test-combobox-option-1"
          role="option"
          tabindex="-1"
      >
        Option 2
      </li>
      <li aria-posinset="3"
          aria-selected="false"
          aria-setsize="3"
          id="test-combobox-option-2"
          role="option"
          tabindex="-1"
      >
        Option 3
      </li>
    </ul>
  </div>
</div>
`;
